Opened 18 years ago

Closed 17 years ago

#1128 closed bug (fixed)

Backgrounds desktop rightclick menu crash

Reported by: cebif Owned by: bga
Priority: normal Milestone: R1
Component: Preferences/Backgrounds Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I get this crash when openning backgrounds from the desktop right click menu. The steps to produce this are:

  1. right click on desktop.
  2. Move mouse pointer to addons/backgrounds

The moment backgrounds is clicked a crash. Expected behaviour: the backgrounds application should open

Here is the debug information from the crash: GNU gdb 6.3 Copyright 2004 Free Software Foundation, Inc. GDB is free software, covered by the GNU General Public License, and you are welcome to change it and/or distribute copies of it under certain conditions. Type "show copying" to see the conditions. There is absolutely no warranty for GDB. Type "show warranty" for details. This GDB was configured as "i586-pc-haiku"...(no debugging symbols found)

Thread 145 caused an exception: Segment violation Reading symbols from /boot/beos/system/lib/libbe.so...(no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libbe.so Reading symbols from /boot/beos/system/lib/libtracker.so...(no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libtracker.so Reading symbols from /boot/beos/system/lib/libroot.so...done. Loaded symbols for /boot/beos/system/lib/libroot.so Reading symbols from /boot/beos/system/lib/libqoca.so...done. Loaded symbols for /boot/beos/system/lib/libqoca.so Reading symbols from /boot/beos/system/lib/libstdc++.hrev4.so...done. Loaded symbols for /boot/beos/system/lib/libstdc++.hrev4.so Reading symbols from /boot/beos/system/lib/libtranslation.so...done. Loaded symbols for /boot/beos/system/lib/libtranslation.so Reading symbols from /boot/beos/system/lib/libtextencoding.so...done. Loaded symbols for /boot/beos/system/lib/libtextencoding.so Reading symbols from /boot/beos/system/add-ons/Tracker/Background-B...done. Loaded symbols for /boot/beos/system/add-ons/Tracker/Background-B

[Switching to team /boot/beos/system/Tracker (60) thread Backgrounds (145)] 0x00969780 in BackgroundsView::MessageReceived ()

from /boot/beos/system/add-ons/Tracker/Background-B

(gdb) I was using a raw hard drive image: haiku.image.bz2, about the 22nd March.

Change History (8)

comment:1 by korli, 18 years ago

Component: - General- Preferences/Backgrounds
Owner: changed from axeld to korli

comment:2 by korli, 18 years ago

I can't reproduce on Qemu. Anything special on your side ?

comment:3 by cebif, 18 years ago

I also tried to reproduce the bug in vmware with hrev20438. I wasn't able to. I then tried the hard drive install of hrev20438. Not able to reproduce. Is it possible that the bug could only exist in this version: haiku.image.bz2 from 22nd March for HD install. I have not tried: http://haikuhost.com/housestrain/get.php?file=r20441_vmware.tar.bz2 download for vmware. At least not yet.

comment:4 by korli, 18 years ago

Please give some details. If not this bug will be closed.

comment:5 by korli, 18 years ago

Resolution: invalid
Status: newclosed

Closing...

comment:6 by bga, 17 years ago

Resolution: invalid
Status: closedreopened

comment:7 by bga, 17 years ago

Owner: changed from korli to bga
Status: reopenednew

I can reproduce this at will. I am on it.

comment:8 by bga, 17 years ago

Resolution: fixed
Status: newclosed

Fixed on hrev27153.

Note: See TracTickets for help on using tickets.