- Fixed Backgrounds Tracker add-on. I have no idea how some people seem to not   be able toreproduce it before. - Don't try to access methods in a NULL object. :) - This fixex bug #1128.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27153 a95241bf-73f2-0310-859d-f6bbb57e9c96